--- a/config
+++ b/config
@@ -114,7 +114,7 @@ bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
-# Define names for default workspaces for which we configure key bindings later on
+# Define names for default workspaces for which we configure key bindings later on:
 set $ws1 "1"
 set $ws2 "2"
 set $ws3 "3"
@@ -125,7 +125,7 @@ set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
-# switch to workspace
+# switch to workspace:
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
@@ -136,7 +136,7 @@ bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
-# move focused container to workspace
+# move focused container to workspace:
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
@@ -206,3 +206,5 @@ bindsym $mod+Shift+f exec dolphin
 bindsym $mod+Shift+c exec code
 # run keepassxc
 bindsym $mod+Shift+N exec keepassxc
+# run obsidian
+bindsym $mod+shift+o exec obsidian
