--- a/config
+++ b/config
@@ -1,26 +1,158 @@
-# i3 config file (v4) 
-# by Hanashiko
+### i3 config file (v5) 
+### by Hanashiko
 
+## Basic settings:
+
+# Modifier key
 set $mod Mod4
 
-font pango:monospace 8
+# Fonts:
 font pango:JetBrainsMonoBold 9
 
+# Window appearance:
 for_window [class=".*"] border pixel 0
 gaps inner 13
 gaps outer 6
 smart_borders on
 
-bindsym Ctrl+Alt+t exec kitty
+# Floating modifier:
+floating_modifier $mod
+tiling_drag modifier titlebar
 
-# Start XDG autostart .desktop files
+
+## Autostart:
+
+# Autostart XDG applicaions
 exec --no-startup-id dex --autostart --environment i3
+
 # Auto lock screen
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --blur 5 --clock --time-color=ffffff --date-color=ffffff --time-str="%H:%M" --date-str="%A, %d %B" --verif-text="Перевірка" --wrong-text="Пусто" --noinput-text="Пусто" --inside-color=00000066 --ring-color=5e81acaa --keyhl-color=d8dee9ee --line-color=00000000 --insidewrong-color=bf616a80 --ringwrong-color=bf616a --pass-media-keys --pass-screen-keys --indicator
+
+# GPU management
+exec --no-startup-id optimus-manager --startup
+
+# Set keyboard latout
+exec_always "setxkbmap -model pc104 -layout us,ua -varian ,, -option grp:alt_shift_toggle"
+
+# Set wallpaper
+exec_always feh --bg-scale ~/.config/i3/wallpaper.jpg
+
+# Start polybar
+exec --no-startup-id polybar
+
+# Start gnome-keyring for Wi-Fi passwords
+exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=secrets
+
+
+## Navigating and managing windows:
+
+# Focus window:
+bindsym $mod+j focus left
+bindsym $mod+k focus down
+bindsym $mod+l focus up
+bindsym $mod+semicolon focus right
+
+# Move window:
+bindsym $mod+Shift+j move left
+bindsym $mod+Shift+k move down
+bindsym $mod+Shift+l move up
+bindsym $mod+Shift+semicolon move right
+
+# Split orientation:
+bindsym $mod+h split h
+bindsym $mod+v split v
+
+# Fullscreen toggle
+bindsym $mod+f fullscreen toggle
+
+# Toggle floating
+bindsym $mod+Shift+space floating toggle
+
+# Focus mode toggle
+bindsym $mod+space focus mode_toggle
+
+# Focus parent/child:
+bindsym $mod+a focus parent
+bindsym $mod+d focus child
+
+# Layout modes:
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
+
+
+## Workspaces:
+
+# Define workspace names:
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
+
+# Switch to workspace:
+bindsym $mod+1 workspace number $ws1
+bindsym $mod+2 workspace number $ws2
+bindsym $mod+3 workspace number $ws3
+bindsym $mod+4 workspace number $ws4
+bindsym $mod+5 workspace number $ws5
+bindsym $mod+6 workspace number $ws6
+bindsym $mod+7 workspace number $ws7
+bindsym $mod+8 workspace number $ws8
+bindsym $mod+9 workspace number $ws9
+bindsym $mod+0 workspace number $ws10
+
+# Move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace number $ws1
+bindsym $mod+Shift+2 move container to workspace number $ws2
+bindsym $mod+Shift+3 move container to workspace number $ws3
+bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+5 move container to workspace number $ws5
+bindsym $mod+Shift+6 move container to workspace number $ws6
+bindsym $mod+Shift+7 move container to workspace number $ws7
+bindsym $mod+Shift+8 move container to workspace number $ws8
+bindsym $mod+Shift+9 move container to workspace number $ws9
+bindsym $mod+Shift+0 move container to workspace number $ws10
+
+
+## Resize mode:
+
+mode "resize" {
+    bindsym j resize shrink width 10 px or 10 ppt
+    bindsym k resize grow height 10 px or 10 ppt
+    bindsym l resize shrink height 10 px or 10 ppt
+    bindsym semicolon resize grow width 10 px or 10 ppt
+
+    # Arrow keys:
+    bindsym Left resize shrink width 10 px or 10 ppt
+    bindsym Down resize grow height 10 px or 10 ppt
+    bindsym Up resize shrink height 10 px or 10 ppt
+    bindsym Right resize grow width 10 px or 10 ppt
+
+    # Exit resize mode:
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+    bindsym $mod+r mode "default"
+}
+
+# Enter resize mode
+bindsym $mod+r mode "resize"
+
+
+
+
+
+
+
+
+bindsym Ctrl+Alt+t exec kitty
 # Lock screen by keyboard
 bindsym $mod+Shift+X exec --no-startup-id i3lock -c 000000 --clock --time-color=ffffff --date-color=ffffff --date-str="$(xkb-switch -p)"
-# GPU
-exec --no-startup-id optimus-manager --startup
 # Display from GPU HDMI port
 #exec --no-startup-id prime-run xrandr --output HDMI-1-0 --auto --right-of eDP-1
 bindsym $mod+Shift+P exec --no-startup-id prime-run xrandr --output HDMI-1-0 --auto --right-of eDP-1
@@ -61,11 +193,6 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym Shift+Ctrl+plus exec --no-startup-id playerctl next
 #previous song
 bindsym Shift+Ctrl+minux exec --no-startup-id playerctl previous
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-# move tiling windows via drag & drop by left-clicking into the title bar,
-# or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
 # start a terminal
 bindsym $mod+Return exec alacritty
 # kill focused window
@@ -74,79 +201,16 @@ bindsym $mod+q kill
 #bindsym $mod+Shift+d exec --no-startup-id dmenu_run
 bindsym $mod+Shift+d exec ~/.config/rofi/bin/launcher
 
-# change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-# move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
-
-# split in horizontal orientation
-bindsym $mod+h split h
-# split in vertical orientation
-bindsym $mod+v split v
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-# focus the parent container
-bindsym $mod+a focus parent
-# focus the child container
-bindsym $mod+d focus child
-#change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# Define names for default workspaces for which we configure key bindings later on:
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-# switch to workspace:
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
-# move focused container to workspace:
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file for i3 and polybar
 bindsym $mod+shift+r exec --no-startup-id "i3-msg restart; polybar-msg cmd restart"
@@ -156,41 +220,10 @@ bindsym $mod+Shift+e exec ~/.config/rofi/bin/powermenu
 # turn off
 bindsym $mod+Shift+Ctrl+e exec systemctl poweroff
 
-# resize window 
-mode "resize" {
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-# enter resize mode
-bindsym $mod+r mode "resize"
-
-# change keyboard layout ua and en
-exec_always "setxkbmap -model pc104 -layout us,ua -variant ,, -option grp:alt_shift_toggle"
-# set wallpaper
-exec_always feh --bg-scale ~/.config/i3/wallpaper.jpg
-# status bar
-exec --no-startup-id polybar
 # bindsym $mod+Shift+U exec --no-startup-id polybar
 #brightness
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
-#gnome-keyring for saving wifi passwords
-exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=secrets
 
 # open firefox
 bindsym $mod+Shift+b exec firefox --new-window
