--- a/config
+++ b/config
@@ -1,8 +1,7 @@
 ### i3 config file (v5) 
 ### by Hanashiko
 
-## Basic settings:
-
+## =========== Basic settings ===========
 # Modifier key
 set $mod Mod4
 
@@ -20,8 +19,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 
-## Autostart:
-
+## =========== Autostart ===========
 # Autostart XDG applicaions
 exec --no-startup-id dex --autostart --environment i3
 
@@ -44,8 +42,7 @@ exec --no-startup-id polybar
 exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=secrets
 
 
-## Navigating and managing windows:
-
+## =========== Navigating and managing windows ===========
 # Focus window:
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -81,8 +78,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 
-## Workspaces:
-
+## =========== Workspaces ===========
 # Define workspace names:
 set $ws1 "1"
 set $ws2 "2"
@@ -120,8 +116,7 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 
-## Resize mode:
-
+## =========== Resize mode ===========
 mode "resize" {
     bindsym j resize shrink width 10 px or 10 ppt
     bindsym k resize grow height 10 px or 10 ppt
@@ -144,6 +139,92 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 
+## =========== Screenshots ===========
+# Full screen to file
+bindsym Print exec --no-startup-id maim ~/Pictures/Screenshots/$(date +%Y-%m-%d--%H-%M-%S).png
+
+# Full screen to clipboard
+bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
+
+# Active screen to file
+bindsym Shift+Print exec --no-startup-id maim -o -g $(xrandr | grep ' connected primary' | cut -d' ' -f4) ~/Pictures/Screenshots/$(date +%Y-%m-%d--%H-%M-%S).png
+
+# Active screen to clipboard
+bindsym Ctrl+Shift+Print exec --no-startup-id maim -o -g $(xrandr | grep ' connected primary' | cut -d' ' -f4) | xclip -selection clipboard -t image/png
+
+# Active window to file
+bindsym $mod+Shift+Print exec --no-startup-id maim -i $(xdotool getactivewindow) ~/Pictures/Screenshots/$(date +%Y-%m-%d--%H-%M-%S).png
+
+# Active window to clipboard
+bindsym Ctrl+$mod+Shift+Print exec --no-startup-id maim -i $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
+
+# Selected area to file
+bindsym $mod+Print exec --no-startup-id maim -s ~/Pictures/Screenshots/$(date +%Y-%m-%d--%H-%M-%S).png 
+
+# Selected area to clipboard
+bindsym Ctrl+$mod+Print exec --no-startup-id maim -s | xclip -selection clipboard -t image/png
+
+
+## =========== Volume and brightness ===========
+# Volume control:
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
+
+# Brightness control:
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
+
+
+## =========== Media control ===========
+# Next song
+bindsym Ctrl+Shift+plus exec --no-startup-id playerctl next
+# Previous song
+bindsym Ctrl+Shift+minux exec --no-startup-id playerctl previous
+
+
+## =========== Blocking and terminating the session ===========
+# Lock screen
+bindsym $mod+Shift+X exec --no-startup-id i3lock -c 000000 --clock --time-color=ffffff --date-color=ffffff --date-str="$(xkb-switch -p)"
+
+# Reload i3 and polybar
+bindsym $mod+Shift+r exec --no-startup-id "i3-msg restart; polybar-msg cmd restart"
+
+# Power menu
+bindsym $mod+Shift+e exec ~/.config/rofi/bin/powermenu
+
+# Shutdown
+bindsym $mod+Shift+Ctrl+e exec systemctl poweroff
+
+
+## =========== Launching programmes ===========
+# Terminal
+bindsym $mod+Return exec alacritty
+
+# Application launcher
+bindsym $mod+Shift+d exec ~/.config/rofi/bin/launcher
+
+# Web browser
+bindsym $mod+Shift+b exec firefox --new-window
+
+# Telegram
+bindsym $mod+Shift+t exec telegram-desktop
+
+# File manager
+bindsym $mod+Shift+f exec dolphin
+
+# Terminal file manager
+bindsym $mod+Shift+v  exec alacritty -e yazi
+
+# Code editor
+bindsym $mod+Shift+c exec code
+
+# Password manager
+bindsym $mod+Shift+o exec obsidian
+
+
+
 
 
 
@@ -151,8 +232,6 @@ bindsym $mod+r mode "resize"
 
 
 bindsym Ctrl+Alt+t exec kitty
-# Lock screen by keyboard
-bindsym $mod+Shift+X exec --no-startup-id i3lock -c 000000 --clock --time-color=ffffff --date-color=ffffff --date-str="$(xkb-switch -p)"
 # Display from GPU HDMI port
 #exec --no-startup-id prime-run xrandr --output HDMI-1-0 --auto --right-of eDP-1
 bindsym $mod+Shift+P exec --no-startup-id prime-run xrandr --output HDMI-1-0 --auto --right-of eDP-1
@@ -165,41 +244,11 @@ bindsym $mod+Shift+P exec --no-startup-id prime-run xrandr --output HDMI-1-0 --a
 #picom
 #exec --no-startup-id picom --config ~/.config/picom/picom.conf
 #bindsym $mod+Ctrl+Shift+P exec --no-startup-id picom --config ~/.config/picom/picom.conf
-# Screenshots
-# Full screen into file
-bindsym Print exec --no-startup-id maim ~/Pictures/Screenshots/$(date +%Y-%m-%d--%H-%M-%S).png
-# Full screen into clipboard 
-bindsym Ctrl+Print exec --no-startup-id maim | xclip -selection clipboard -t image/png
-# Active screen into file 
-bindsym Shift+Print exec --no-startup-id maim -o -g $(xrandr | grep ' connected primary' | cut -d' ' -f4) ~/Pictures/Screenshots/$(date +%Y-%m-%d--%H-%M-%S).png
-# Active screen into clipboard
-bindsym Ctrl+Shift+Print exec --no-startup-id maim -o -g $(xrandr | grep ' connected primary' | cut -d' ' -f4) | xclip -selection clipboard -t image/png
-# Active window into file 
-bindsym $mod+Shift+Print exec --no-startup-id maim -i $(xdotool getactivewindow) ~/Pictures/Screenshots/$(date +%Y-%m-%d--%H-%M-%S).png
-# Active window into clipboard 
-bindsym Ctrl+$mod+Shift+Print exec --no-startup-id maim -i $(xdotool getactivewindow) | xclip -selection clipboard -t image/png
-# Selected area into file 
-bindsym $mod+Print exec --no-startup-id maim -s ~/Pictures/Screenshots/$(date +%Y-%m-%d--%H-%M-%S).png 
-# Selected area into clipboard 
-bindsym Ctrl+$mod+Print exec --no-startup-id maim -s | xclip -selection clipboard -t image/png
-# Adjust volume
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-#music
-#next song
-bindsym Shift+Ctrl+plus exec --no-startup-id playerctl next
-#previous song
-bindsym Shift+Ctrl+minux exec --no-startup-id playerctl previous
 # start a terminal
-bindsym $mod+Return exec alacritty
 # kill focused window
 bindsym $mod+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+Shift+d exec --no-startup-id dmenu_run
-bindsym $mod+Shift+d exec ~/.config/rofi/bin/launcher
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -212,32 +261,15 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# reload the configuration file for i3 and polybar
-bindsym $mod+shift+r exec --no-startup-id "i3-msg restart; polybar-msg cmd restart"
-# log out
-#bindsym $mod+Shift+e exec i3-msg exit
-bindsym $mod+Shift+e exec ~/.config/rofi/bin/powermenu
-# turn off
-bindsym $mod+Shift+Ctrl+e exec systemctl poweroff
-
 # bindsym $mod+Shift+U exec --no-startup-id polybar
-#brightness
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 
 # open firefox
-bindsym $mod+Shift+b exec firefox --new-window
 # open telegram
-bindsym $mod+Shift+t exec telegram-desktop
 # open spotify
 #bindsym $mod+Shift+m exec spotify-launcher
 # open terminal files reader
-bindsym $mod+Shift+v exec kitty -e yazi
+# bindsym $mod+Shift+v exec kitty -e yazi
 # open dolphin files manager
-bindsym $mod+Shift+f exec dolphin
 # open vs code
-bindsym $mod+Shift+c exec code
 # run keepassxc
-bindsym $mod+Shift+N exec keepassxc
 # run obsidian
-bindsym $mod+shift+o exec obsidian
