--- a/config
+++ b/config
@@ -321,18 +321,21 @@ bindsym $mod+Shift+Escape exec --no-startup-id alacritty -e btop
 # WINDOW RULES & AUTOMATION
 # ========================================
 
-# Float specific applications:
-for_window [class="Pavucontrol"] floating enable
-for_window [class="Blueman-manager"] floating enable
-for_window [class="Nm-connection-editor"] floating enable
-for_window [class="Gcolor3"] floating enable
-for_window [class="keepassxc" window_role="MainWindow"] floating enable
+# ========================================
+# MODES FOR ADVANCED OPERATIONS
+# ========================================
 
-# Assign applicaions to specific workspaces:
-assign [class="TelegramDesktop"] $ws3
-assign [class="firefox"] $ws10
-assign [class="Code"] $ws3
-assign [class="Spotify"] $ws1
+# System mode for power management
+set $mode_system System: (l) lock, (e) logout, (s) suspend, (r) reboot, (p) poweroff
+mode "$mode_system" {
+    bindsym l exec --no-startup-id i3lock -c 000000, mode "default"
+    bindsym e exec --no-startup-id i3-msg exit, mode "default"
+    bindsym s exec --no-startup-id systemctl suspend, mode "default"
+    bindsym r exec --no-startup-id systemctl reboot, mode "default"
+    bindsym p exec --no-startup-id systemctl poweroff, mode "default"
 
-# Always float picture-in-picture windows
-for_window [title="Picture-in-Picture"] floating enable, sticky enable
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
+bindsym $mod+Pause mode "$mode_system"
