--- a/config
+++ b/config
@@ -297,8 +297,7 @@ bindsym $mod+Ctrl+Shift+Left move workspace to output left
 bindsym $mod+Ctrl+Shift+Right move workspace to output right
 
 # Quick applicaion switching
-bindsym Mod1+Tab exec --no-startup-id rofi -show window
-# bindsym Mod1+Tab exec --no-startup-id ~/.config/rofi/bin/launcher
+bindsym Mod1+Tab exec --no-startup-id ~/.config/rofi/bin/window
 
 # ========================================
 # QUICK LAUNCHERS & UTILITIES
