--- a/config
+++ b/config
@@ -227,7 +227,7 @@ bindsym $mod+Ctrl+Left exec --no-startup-id playerctl previous
 bindsym $mod+Ctrl+space exec --no-startup-id playerctl play-pause
 
 # Brightness control:
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10% && notify-send "Brightness: $(brightnessctl get) / $(brightnessctl max)"
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 
 # ========================================
